--- a/css/styles.css
+++ b/css/styles.css
@@ -403,6 +403,7 @@ img {
     margin-bottom: 9px;
 }
 .footer-contacts-link {
+    font-size: 14px;
     line-height: calc(24 / 14);
     font-weight: 400;
     letter-spacing: 0.03em;
@@ -456,10 +457,7 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
-/* .footer-form {
-    display: flex;
-    flex-direction: column;
-} */
+
 .footer-form-inner input {
     padding-left: 16px;
     padding-top: 15px;
